Add ChangeLog entry.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-12-25  Dave Peticolas <dave.peticolas@gmail.com>
 
+	* Reformat @doc sections to be consistent.
+
+2007-12-25  Dave Peticolas <dave.peticolas@gmail.com>
+
 	* Add ChangeLog to comply with EPL.
 
 2007-12-25  Dave Peticolas <dave.peticolas@gmail.com>
