Update contributor list.

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,11 +4,14 @@ The Erlang emacs mode was written by Anders Lindgren.
 Contributors:
 Luke Gorrie 
 Dave Love
+Eric Merritt
+Martin Logan
 
 Maintainers:
 Sverker Wiberg
 Kent Boortz
 Björn Gustavsson
+Ingela Anderton Andin
 
 Currently maintained by:
-Ingela Anderton Andin
+Dave Peticolas
