--- a/README
+++ b/README
@@ -6,6 +6,13 @@ started with the Erlang mode for Emacs. Please refer to the
 Users guide and reference manual in the documentation for the
 Erlang/OTP application tools for more information.
 
+You can obtain a copy of the Erlang man pages here:
+
+    http://www.erlang.org/download/
+
+Note for the man page menus to be populated, the Erlang
+man pages must be in uncompressed form.
+
 
 For UNIX users
 --------------
@@ -17,7 +24,7 @@ Below is a complete example of what should be added to a user's .emacs
 provided that OTP is installed in the directory /usr/local/otp:
         
       (setq load-path (cons "<path-to-mode>/erlware-mode" load-path))
-      (setq erlang-root-dir "/usr/local/otp")
+      (setq erlang-man-root-dir "/usr/local/otp")
       (setq exec-path (cons "/usr/local/otp/bin" exec-path))
       (require 'erlang-start)
 
@@ -38,16 +45,15 @@ For Windows users
 To set up the Erlang Emacs mode on Windows systems, edit/create the
 file .emacs, the location of the file depends on the configuration of
 the system. If the HOME environment variable is set, Emacs will look
-for the .emacs file in the directory indicated by the HOME
-variable. If HOME is not set, Emacs will look for the .emacs file in
-C:\.
+for the .emacs file in the directory indicated by the HOME variable.
+ If HOME is not set, Emacs will look for the .emacs file in C:\.
 
 Below is a complete example of what should be added to a user's .emacs
 provided that OTP is installed in the directory C:\Program
 Files\erl-<Ver>:
 
       (setq load-path (cons  "<path-to-mode>/erlware-mode" load-path))
-      (setq erlang-root-dir "C:/Program Files/erl<Ver>")
+      (setq erlang-man-root-dir "C:/Program Files/erl<Ver>")
       (setq exec-path (cons "C:/Program Files/erl<Ver>/bin" exec-path))
       (require 'erlang-start)
 
