--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-05-04  Dave Peticolas <dave@krondo.com>
+
+	* Automatic newline for electric comma at the end of erlang clauses.
+
+2008-04-28  Dave Peticolas <dave@krondo.com>
+
+	* New comment indenting behavior.
+
 2008-04-20  Dave Peticolas <dave@krondo.com>
 
 	* Use supervisor:start_link/0. Update docs.
