--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2008-05-17  Dave Peticolas <dave@krondo.com>
+
+	* Remove the arrow font lock function.
+
+2008-05-16  Dave Peticolas <dave@krondo.com>
+
+	* Erlang test file for erlware mode.
+
+2008-05-15  Dave Peticolas <dave@krondo.com>
+
+	* Remove dead code.
+
+2008-05-15  Dave Peticolas <dave@krondo.com>
+
+	* Treat $ as a character quote, not an expression prefix.
+
 2008-05-04  Dave Peticolas <dave@krondo.com>
 
 	* Automatic newline for electric comma at the end of erlang clauses.
