--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-11  Dave Peticolas <dave@krondo.com>
+
+	* Fix bif/guard highlighting (Issue 25).
+
 2008-10-31  Dave Peticolas <dave@krondo.com>
 
 	* Remove cruft. Fix issue 24 (catch clause indentation).
