--- a/AUTHORS
+++ b/AUTHORS
@@ -17,6 +17,7 @@ Ingela Anderton Andin
 The Erlware mode has contributions from:
 Eric Merritt
 Martin Logan
+Mats Cronqvist
 
 The Erlware mode is currently maintained by:
 Dave Peticolas
