--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-18  mats cronqvist <mats.cronqvist@gmail.com>
+
+	* himBHliteral fix
+
 2009-02-16  mats cronqvist <mats.cronqvist@gmail.com>
 
 	* fixed syntax hilite
