--- a/AUTHORS
+++ b/AUTHORS
@@ -18,6 +18,8 @@ The Erlware mode has contributions from:
 Eric Merritt
 Martin Logan
 Mats Cronqvist
+Derek Upham
+Jim Morris
 
 The Erlware mode is currently maintained by:
 Dave Peticolas
