Update AUTHORS and remind myself to do so in the future.

--- a/AUTHORS
+++ b/AUTHORS
@@ -20,6 +20,7 @@ Martin Logan
 Mats Cronqvist
 Derek Upham
 Jim Morris
+Magnus Henoch
 
 The Erlware mode is currently maintained by:
 Dave Peticolas
