--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,23 @@
+2009-07-02  Magnus Henoch <magnus@erlang-consulting.com>
+
+	* erlang.el (erlang-calculate-stack-indent): Combine ignored 'if' statement for 'after' with the one for 'catch', to fix indentation of try-after.
+
+2009-06-27  Dave Peticolas <dave@krondo.com>
+
+	* Ignore module name mismatch, as flymake renames the file.
+
+2009-06-11  Magnus Henoch <magnus@erlang-consulting.com>
+
+	* erlang.el (erlang-get-function-name-and-arity): Fix arity: only count "sexp" as parameter when followed by "," or ")".
+
+2009-06-08  Magnus Henoch <magnus@erlang-consulting.com>
+
+	* erlang.el (erlang-get-function-name-and-arity): New function. (erlang-mode-variables): Use it to include function arity in imenu entries.
+
+2009-05-22  Magnus Henoch <magnus@erlang-consulting.com>
+
+	* (erlang-mode-variables): Set comment-add to 0 if using new-style comments, for proper operation of M-; on regions.
+
 2009-05-18  Magnus Henoch <magnus@erlang-consulting.com>
 
 	* (erlang-mode-map): Define keymap when module is loaded.
