--- a/AUTHORS
+++ b/AUTHORS
@@ -21,6 +21,7 @@ Mats Cronqvist
 Derek Upham
 Jim Morris
 Magnus Henoch
+Tino Breddin
 
 The Erlware mode is currently maintained by:
 Dave Peticolas
